--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,28 @@
     padding: 0;
     box-sizing: 0;
 }
-body{
+
+/* Lista */
+.contenitore{
+    border: 5px solid black;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
     background-color: antiquewhite;
+}
+.lista-spesa{
+    margin: 0 auto;
+}
+h1{
+    text-transform: uppercase;
+    border: 1px solid black;
+    background-color: cadetblue;
+    margin: 0px;
+}
+ul{
+    list-style: none;
+}
+li{
+    border: 1px solid black;
+    padding: 0.5em 0em;
 }
